# sisk-mqtt-examples

./: .gitignore  .gitmodules  Prezentacja_MQTT.pptx  README.md  mqtt_example_publisher.py  mqtt_example_subscriber.py  requirements.txt
cpp_example/: CMakeLists.txt
cpp_example/src/: mqtt_example_client.cpp
mqtt_esp8266_and_dallas_example/: mqtt_esp8266_and_dallas.ino
project/sisk-app-publisher-esp32/: main.c  workspace.code-workspace
project/sisk-app-publisher-esp32/main/: CMakeLists.txt  action.c  action.h  ds18b20.c  ds18b20.h  main.c  mqtt_app.c  mqtt_app.h
project/sisk-app-subscriber-esp32/: CMakeLists.txt  sisk-app-subscriber-esp32.code-workspace
project/sisk-app-subscriber-esp32/main/: CMakeLists.txt  action.c  action.h  main.c  mqtt_app.c  mqtt_app.h  wifi_app.c  wifi_app.h
python_example/: mqtt_example_publisher.py  mqtt_example_subscriber.py
